crates/ars-components/src/data_display/grid_list/snapshots/ars_components__data_display__grid_list__tests__grid_list_cell_link_selected_focused.snap
---
source: crates/ars-components/src/data_display/grid_list/mod.rs
expression: "snapshot_attrs(&api.cell_attrs(&key(\"alpha\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-focus-visible",
            ),
            Bool(
                true,
            ),
        ),
        (
            Data(
                "ars-key",
            ),
            String(
                "alpha",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "cell",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "grid-list",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "products-cell-alpha",
            ),
        ),
        (
            Role,
            String(
                "gridcell",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
        (
            Href,
            String(
                "/products/alpha",
            ),
        ),
    ],
    styles: [],
}
