crates/ars-components/src/data_display/grid_list/snapshots/ars_components__data_display__grid_list__tests__grid_list_drag_handle_disabled_item.snap
---
source: crates/ars-components/src/data_display/grid_list/mod.rs
expression: "snapshot_attrs(&api.drag_handle_attrs(&key(\"beta\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "drag-handle",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "grid-list",
            ),
        ),
        (
            Aria(
                Disabled,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Drag Beta",
            ),
        ),
        (
            Role,
            String(
                "button",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
    ],
    styles: [],
}
