crates/ars-components/src/data_display/grid_list/snapshots/ars_components__data_display__grid_list__tests__grid_list_root_grid.snap
---
source: crates/ars-components/src/data_display/grid_list/mod.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "grid-list",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "focused",
            ),
        ),
        (
            Aria(
                ActiveDescendant,
            ),
            String(
                "products-cell-alpha",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Products",
            ),
        ),
        (
            Aria(
                MultiSelectable,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "products",
            ),
        ),
        (
            Role,
            String(
                "grid",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
