crates/ars-components/src/data_display/grid_list/snapshots/ars_components__data_display__grid_list__tests__grid_list_row_selected.snap
---
source: crates/ars-components/src/data_display/grid_list/mod.rs
expression: "snapshot_attrs(&api.row_attrs(&key(\"alpha\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-key",
            ),
            String(
                "alpha",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "row",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "grid-list",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Selected,
            ),
            String(
                "true",
            ),
        ),
        (
            Role,
            String(
                "row",
            ),
        ),
    ],
    styles: [],
}
